gcc/testsuite/rust/rustc/ui/infinite/infinite-macro-expansion.rs
macro_rules! recursive {
    () => (recursive!()) // { dg-error "" "" { target *-*-* } }
}

fn main() {
    recursive!()
}

